testdata/e2e/config-v1alpha2.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/configuration-chainsaw-v1alpha2.json
apiVersion: chainsaw.kyverno.io/v1alpha2
kind: Configuration
metadata:
  creationTimestamp: null
  name: configuration
spec:
  discovery:
    fullName: true
  execution:
    failFast: true
    forceTerminationGracePeriod: 5s
    parallel: 1
